Added css reset file and added it to html. Also started to build the form field and button.

--- a/index.html
+++ b/index.html
@@ -10,13 +10,20 @@
     <!-- Font Awesome CSS Icons (For cool glyphicons) -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
 
+    <link rel="stylesheet" href="weather-dashboard/assets/css/reset.css" />
+
     <link rel="stylesheet" href="weather-dashboard/assets/css/style.css" />
 
     <title>Weather Dashboard</title>
 </head>
 <body>
     
-
+    <form class="form-inline">
+        <label class="sr-only" for="city-name">Name</label>
+        <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2" placeholder="Enter City">
+      
+        <button type="submit" class="btn btn-primary mb-2">Submit</button>
+    </form>
 
     <!-- jQuery JS -->
     <script src="https://code.jquery.com/jquery.js"></script>
