--- a/index.html
+++ b/index.html
@@ -47,18 +47,18 @@
 
             <form class="form-inline">
                 <!-- Search button -->
-                <button type="submit" class="col-1" id="search-btn">
+                <button type="submit" class="" id="search-btn">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white" class="bi bi-search mb-1" id="search-btn-img" viewBox="0 0 16 16">
                         <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
                     </svg>
                 </button>
 
                 <!-- City search field -->
-                <input type="text" class="col-6 mt-0 ml-1" id="city-name" placeholder="Enter City">
+                <input type="text" class="mt-0 ml-1" id="city-name" placeholder="Enter City">
             </form>
 
             <!-- Fake notifications and settings icons -->
-            <div class="col-4 mt-3 mr-3 ml-1" id="fake-systems">
+            <div class="mt-3 mr-3 ml-1" id="fake-systems">
                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white" class="bi bi-bell-fill" id="bell-icon" viewBox="0 0 16 16">
                     <path d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zm.995-14.901a1 1 0 1 0-1.99 0A5.002 5.002 0 0 0 3 6c0 1.098-.5 6-2 7h14c-1.5-1-2-5.902-2-7 0-2.42-1.72-4.44-4.005-4.901z"/>
                 </svg>
