--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <nav class="d-flex justify-content-center col-12" id="side-nav">
             <div class="btn-group">
                 <!-- Drop down button -->
-                <button class="btn btn-secondary col-1 btn-sm mt-2 ml-1 mb-3" id="drop-down" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button class="btn btn-secondary btn-sm mt-2 ml-1 mb-3" id="drop-down" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="white" class="bi bi-list" id="drop-down-img" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M2.5 11.5A.5.5 0 0 1 3 11h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 3h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
                     </svg>
